set default hight for photoblog to prevent jumping on loading

--- a/Resources/Public/css/photoblog.css
+++ b/Resources/Public/css/photoblog.css
@@ -43,6 +43,7 @@ textarea.f3-form-error {
 .tx-tlphotoblog-pi1 div.photoblog-list ul li {
 	float: left;
 	width: 205px;
+	height:200px;
 }
 
 .tx-tlphotoblog-pi1 div.content div.rheight20 {
